# CppND-Program-a-Concurrent-Traffic-Simulation

./: CMakeLists.txt  README.md
src/: FifoMessageQueue.h  Intersection.cpp  Intersection.h  MessageQueue.h  Street.cpp  TrafficLight.cpp  TrafficLight.h  TrafficObject.cpp  TrafficObject.h  Vehicle.cpp  Vehicle.h  WorkerState.h
tests/: CMakeLists.txt  test_drain_consistency.cpp  test_input_validation.cpp  test_intersection_shutdown.cpp  test_message_queue.cpp  test_mixed_queue_stress.cpp  test_queue_backpressure.cpp  test_queue_comparison.cpp  test_queue_hardening.cpp  test_queue_sync.cpp  test_shutdown_drain.cpp  test_traffic_light_shutdown.cpp  test_traffic_object_teardown.cpp  test_vehicle_shutdown.cpp  test_worker_coordinated_stop.cpp  test_worker_lifecycle.cpp  test_worker_race_edge_cases.cpp  test_worker_shutdown.cpp  test_worker_state.cpp
